kubernetes/apps/uxi/ptr/map-worker/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uxi-ptr-worker
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: uxi-ptr-server
      app.kubernetes.io/component: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uxi-ptr-server
        app.kubernetes.io/component: worker
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      nodeSelector:
        gpu.homelab/amd: 'true'
      containers:
        - name: worker
          image: git.r1p.dev/unbound-xi/server-worker:v0.1.3@sha256:2d38361a49abc4dfb543078e7486a3e4ac4f6dcff6877ae7b9f756e8f974610e
          imagePullPolicy: IfNotPresent
          command:
            - unbound-worker
          args:
            - serve
          ports:
            - name: lane
              containerPort: 21016
              protocol: TCP
            - name: health
              containerPort: 21019
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 2000m
              memory: 4Gi
            limits:
              memory: 12Gi
              cpu: '8'
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
          startupProbe:
            httpGet:
              path: /readyz
              port: health
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 120
          readinessProbe:
            httpGet:
              path: /readyz
              port: health
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /livez
              port: health
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
      volumes:
        - name: config
          configMap:
            name: uxi-ptr-worker-config
  strategy:
    type: Recreate
